# attrs-marshmallow

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/attrs_marshmallow/: __init__.py
